[gd_scene load_steps=7 format=3 uid="uid://bo2tojwq3nvf0"]

[ext_resource type="Script" path="res://addons/godotWad/scenes/gameModes/main/options/option.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d0akwvcy07xky" path="res://addons/godotWad/scenes/gameModes/main/options/videoOptions.tscn" id="2_g4h8s"]
[ext_resource type="PackedScene" uid="uid://bc17kjoxwngs3" path="res://addons/godotWad/scenes/gameModes/main/options/inputList.tscn" id="3"]

[sub_resource type="Animation" id="2"]
resource_name = "audioFadeIn"
length = 1.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-20.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.1, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="1"]
resource_name = "audioFadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -20.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/AudioStreamPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qp81h"]
_data = {
"audioFadeIn": SubResource("2"),
"audioFadeOut": SubResource("1")
}

[node name="options_template" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="TabContainer" type="TabContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
current_tab = 0

[node name="Video" type="MarginContainer" parent="VBoxContainer/TabContainer"]
layout_mode = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 90
metadata/_tab_index = 0

[node name="Video" parent="VBoxContainer/TabContainer/Video" instance=ExtResource("2_g4h8s")]
layout_mode = 2

[node name="Input" parent="VBoxContainer/TabContainer" instance=ExtResource("3")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Sound" type="MarginContainer" parent="VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 90
metadata/_tab_index = 2

[node name="Sound" type="GridContainer" parent="VBoxContainer/TabContainer/Sound"]
layout_mode = 2
size_flags_stretch_ratio = 8.86
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/TabContainer/Sound/Sound"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"

[node name="masterSlider" type="HSlider" parent="VBoxContainer/TabContainer/Sound/Sound"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
ticks_on_borders = true

[node name="musicVolumeLabel" type="Label" parent="VBoxContainer/TabContainer/Sound/Sound"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"

[node name="musicSlider" type="HSlider" parent="VBoxContainer/TabContainer/Sound/Sound"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "  Exit  "

[node name="DefaultsButton" type="Button" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Restore Defaults"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer"]
volume_db = -20.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_qp81h")
}

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.958563
anchor_right = 0.976563
anchor_bottom = 0.048
offset_left = -0.264038
offset_bottom = -0.104
text = "X"
alignment = 0
metadata/_edit_use_anchors_ = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="drag_ended" from="VBoxContainer/TabContainer/Sound/Sound/masterSlider" to="." method="_on_MasterSlider_drag_ended"]
[connection signal="drag_started" from="VBoxContainer/TabContainer/Sound/Sound/masterSlider" to="." method="_on_MasterSlider_drag_started"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Sound/Sound/masterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/TabContainer/Sound/Sound/musicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DefaultsButton" to="." method="_on_defaults_button_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]

[editable path="VBoxContainer/TabContainer/Video/Video"]
